--- a/app/views/events/edit.html.haml
+++ b/app/views/events/edit.html.haml
@@ -1,3 +1,3 @@
-%h1== Editing event #{@event.name} in #{link_to @event.trip.name, @scene.trip}
+%h1== Editing event #{@event.name} in #{link_to @event.trip.name, @event.trip}
 
 = render :partial => 'form'
