--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,7 @@
     = javascript_include_tag "http://maps.google.com/maps/api/js?sensor=true"
     = javascript_include_tag 'application', 'rails'
     = csrf_meta_tag
-  %body
+  %body{:id => "body-#{controller_name}-#{action_name}", :class => "controller-#{controller_name}"}
     #header-outer
       #header-wrapper
         #header
