--- a/app/views/trips/play.html.haml
+++ b/app/views/trips/play.html.haml
@@ -1,6 +1,6 @@
 %h1= @trip.name
 
-%div{:style => 'display: none'}
+#event_data{:style => 'display: none'}
   - @trip.events.each_with_index do |event, i|
     %div.event{:id => "event-#{i}"}
       %h1= event.name
@@ -19,13 +19,20 @@
 
 = render :partial => 'trips/map', :locals => {:trip => @trip, :mode => :play_trip}
 
-- event = @trip.events.first
-#map_navigation
-  #prev_event
-
-  #current_event
-    %h2= event.name
-    %p.time= event.started_at
-  #next_event
-    = link_to @trip.events.second.name, '#'
-    = link_to '', '#', :class => 'next_arrow arrow'
+- @trip.events.each do |event|
+  - class_name = @trip.events.first == event ? 'active' : ''
+  .map_navigation{:id => "map-navigation-#{event.id}", :class => class_name}
+    .prev_event.event_nav_button
+      - if event.previous_event
+        .event_id= event.previous_event.id
+        = link_to '', '#', :class => 'prev_arrow arrow'
+        = link_to event.previous_event.name, '#', :class => 'name ellipsis'
+    .current_event
+      %h2.ellipsis= link_to event.name, '#'
+      %p.current_event_id= event.id
+      %p.time= event.started_at
+    .next_event.event_nav_button
+      - if event.next_event
+        .event_id= event.next_event.id
+        = link_to event.next_event.name, '#', :class => 'name ellipsis'
+        = link_to '', '#', :class => 'next_arrow arrow'
