--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,7 @@
     = stylesheet_link_tag :all
     = javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"
     = javascript_include_tag "http://maps.google.com/maps/api/js?sensor=true"
-    = javascript_include_tag 'ba-debug', 'anytime', 'trip', 'jquery-ui-1.8.6.custom.min', 'application', 'rails'
+    = javascript_include_tag 'ba-debug', 'helpers', 'underscore', 'date', 'anytime', 'trip', 'jquery-ui-1.8.6.custom.min', 'event_list', 'event_list_item', 'event', 'event_form', 'application', 'rails'
     = csrf_meta_tag
   %body{:id => "body-#{controller_name}-#{action_name}", :class => "controller-#{controller_name}"}
     #header-outer
