--- a/app/views/trips/show.html.haml
+++ b/app/views/trips/show.html.haml
@@ -1,5 +1,7 @@
 %h1== #{link_to 'My Trips', trips_path}  &rsaquo; #{@trip.name}
 
+#trip_id.hide= @trip.id
+
 #trip_details_actions
   = nl2br(@trip.description)
 
@@ -10,9 +12,12 @@
 - unless @trip.events.empty?
   = render :partial => 'trips/map', :locals => {:trip => @trip, :mode => :trip_overview}
   %ul#events= render :partial => 'events/event', :collection => @trip.events
-  %p= link_to 'Add event', new_trip_event_path(:trip_id => @trip.id)
 - else
   %p
     No events yet.
-    = link_to 'Create one', new_trip_event_path(:trip_id => @trip.id)
-    \.
+
+#new_event_wrapper
+  .handle
+  .ajax_loading
+  %h3 Add Event
+  = render :partial => 'events/mini_form', :locals => {:event => Event.new(:trip => @trip)}
