Improved look of trips page. Fixed bugs in event management

--- a/app/views/trips/_form.html.haml
+++ b/app/views/trips/_form.html.haml
@@ -2,6 +2,6 @@
   = error_messages_for :trip
   %fieldset
     %ul
-      = f.input :name, :required => true
+      = f.input :name
       = f.input :description, :as => :text
       = f.commit_button f.object.new_record? ? 'Create Trip' : 'Update Trip', :button_html => { :id => nil }
