--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -239,12 +239,67 @@ form input[type=submit] {
   color: #efefef;
 }
 
+/* trips index */
+#trips li {
+  float: left;
+  position: relative;
+  width: 430px;
+  height: 110px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  background-image: url(/images/trip-default-bg.jpg);
+  background-color: #f8eae1;
+  border: 1px outset #ccc;
+  cursor: pointer;
+  border-radius: 10px; -moz-border-radius: 10px; -webkit-border-radius: 10px;
+}
+
+#trips li:nth-child(even) {
+  margin-right: 0px;
+}
+
+#trips li:hover {
+  border: 1px outset #eb6929;
+  box-shadow: 0px 0px 5px #eb6929;
+  -moz-box-shadow: 0px 0px 5px #eb6929;
+  -webkit-box-shadow: 0px 0px 5px #eb6929;
+}
+
+#trips li h2 {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  line-height: 50px;
+  margin: 0px;
+  padding: 0px 20px;
+  width: 390px;
+  border-bottom-left-radius: 10px; -moz-border-radius-bottomleft: 10px;
+  border-bottom-right-radius: 10px; -moz-border-radius-bottomright: 10px;
+  background-color: rgba(109,109,109,0.6);
+}
+
+#trips li h2 a {
+  text-decoration: none;
+  font-size: 24px;
+  color: #000;
+}
+
+#trips li .description {
+  display: none;
+}
+
+
+
 /* trip show */
+#trip_description {
+  min-height: 30px;
+}
+
 #trip_details_actions {
   width: 100%;
   position: relative;
   border-bottom: 1px solid #eb6929;
-  padding: 10px 0px;
+  padding: 5px 0px;
   margin-bottom: 20px;
 }
 
