--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,13 +1,11 @@
 #intro
-  TripMap is a tool for creating interactive maps of your trips. 
+  TripForge is an online tool for creating interactive maps of your trips.
   %br
   Plot every event in the journey on a map.
   %br
   Add photos and updates from other websites.
   %br
   Share the map with your friends.
-  %br
-  It's easy to use and free.
 
 #get-started
-  = link_to 'Get Started!', '#'
+  = link_to 'Get Started!', signup_path
