--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title TripMap.com
+    %title TripForge.com
     = stylesheet_link_tag :all
     = javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"
     = javascript_include_tag "http://maps.google.com/maps/api/js?sensor=true"
@@ -13,7 +13,7 @@
     #header-outer
       #header-wrapper
         #header
-          = link_to 'TripMap Home', :root, :id => 'logo'
+          = link_to 'TripForge', :root, :id => 'logo'
           #main-navbar
             %ul
               - unless current_user
