--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -259,10 +259,10 @@ form input[type=submit] {
   margin-right: 10px;
   margin-bottom: 10px;
   background-image: url(/images/trip-default-bg.jpg);
-  background-color: #f8eae1;
+  /*background-color: #f8eae1;*/
   border: 1px outset #ccc;
   cursor: pointer;
-  border-radius: 10px; -moz-border-radius: 10px; -webkit-border-radius: 10px;
+  border-radius: 5px 55px; -moz-border-radius: 5px/55px; -webkit-border-radius: 5px 55px;
 }
 
 #trips li:nth-child(even) {
@@ -299,6 +299,10 @@ form input[type=submit] {
   float: left;
   height: 110px;
   width: 100%;
+  text-decoration: none;
+  background: -webkit-gradient(linear, left bottom, left top, color-stop(0, rgba(0,0,0, 0.2)), color-stop(0.6, rgba(255,255,255,0.2)), color-stop(0.7, rgba(255,255,255, 0.4)), color-stop(1, rgba(255,255,255, 0.2)));
+  background: -moz-linear-gradient(center bottom, rgba(0,0,0,0.2) 0%, rgba(255,255,255,0.2) 60%, rgba(255,255,255, 0.4) 70%, rgba(255,255,255,0.2) 100%);
+  border-radius: 5px 55px; -moz-border-radius: 5px/55px; -webkit-border-radius: 5px 55px;
 }
 
 #trips li h2 {
@@ -311,9 +315,6 @@ form input[type=submit] {
   margin: 0px;
   padding: 0px 20px;
   width: 390px;
-  border-bottom-left-radius: 10px; -moz-border-radius-bottomleft: 10px;
-  border-bottom-right-radius: 10px; -moz-border-radius-bottomright: 10px;
-  background-color: rgba(109,109,109,0.6);
 }
 
 #trips li .description {
