--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -8,4 +8,4 @@
   Share the map with your friends.
 
 #get-started
-  = link_to 'Get Started!', signup_path
+  = link_to 'Get Started!', new_user_registration_path
