Added lots of code for connecting to picasa web and display albums

--- a/app/views/authentications/index.haml
+++ b/app/views/authentications/index.haml
@@ -3,21 +3,13 @@
   - unless @authentications.empty?
     %p
       %strong You have signed in with these services:
-    #authentications.plain
-      %ul
-        - for authentication in @authentications
-          %li
-            = image_tag "#{authentication.provider}_64.png", :size => "64x64"
-            .provider
-              = authentication.provider_name
-              -#.uid= authentication.uid
-              = link_to "X", authentication, :confirm => 'Are you sure you want to remove this authentication option?', :method => :delete, :class => "remove"
+    #authentications.plain= render_cell :providers, :list, :only_authentications => @authentications
   %p
     %strong Add another service to sign in with:
 - else
   %p
     %strong Sign in through one of these services:
-#authentications.plain=render :partial => 'authentications/list'
+#authentications.plain= render_cell :providers, :list, :except_authentications => @authentications
 
 - unless user_signed_in?
   %p
