--- a/app/views/trips/edit.html.haml
+++ b/app/views/trips/edit.html.haml
@@ -1,3 +1,3 @@
-%h1== #{link_to 'All Trips', :action => 'index'} &rsaquo; Editing '#{@trip.name}'
+%h1== #{link_to 'All Trips', :action => 'index'} &rsaquo; Editing '#{link_to @trip.name, @trip}'
 
 = render :partial => 'form'
